--- a/chrome.css
+++ b/chrome.css
@@ -1,21 +1,21 @@
 /* Adjust border radius of url bar and its elements */
-:root:has(#theme-Super-Url-Bar[uc-urlbar-border-radius="small"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-border-radius="small"]) {
   --urlbar-border-radius: 4px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-border-radius="medium"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-border-radius="medium"]) {
   --urlbar-border-radius: 8px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-border-radius="large"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-border-radius="large"]) {
   --urlbar-border-radius: 14px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-border-radius="xlarge"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-border-radius="xlarge"]) {
   --urlbar-border-radius: 20px;
 }
 
-:root:has(#theme-Super-Url-Bar[uc-urlbar-border-radius="small"],
-          #theme-Super-Url-Bar[uc-urlbar-border-radius="medium"],
-          #theme-Super-Url-Bar[uc-urlbar-border-radius="large"],
-          #theme-Super-Url-Bar[uc-urlbar-border-radius="xlarge"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-border-radius="small"],
+          #theme-Belle-Url-Bar[uc-urlbar-border-radius="medium"],
+          #theme-Belle-Url-Bar[uc-urlbar-border-radius="large"],
+          #theme-Belle-Url-Bar[uc-urlbar-border-radius="xlarge"]) {
     #urlbar, #urlbar-background, #notification-popup-box, #urlbar .urlbar-page-action, #urlbar #tracking-protection-icon-container,
     #urlbar:not([breakout-extend="true"]) #identity-box:is(:not(.chromeUI), [pageproxystate="invalid"]) #identity-icon-box,
     #urlbar:not([breakout-extend="true"]) #identity-box.chromeUI:not([pageproxystate="invalid"]) #identity-icon-box,
@@ -33,12 +33,12 @@
 }
 
 /* Centers the url text when enabled in dropdown: 1.Option: Centers the text unless url bar is focused; 2.Option: Centers the text always*/
-:root:has(#theme-Super-Url-Bar[uc-urltext-center="normal"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urltext-center="normal"]) {
   #urlbar:not([focused]) .urlbar-input {
     text-align: center !important; 
   }
 }
-:root:has(#theme-Super-Url-Bar[uc-urltext-center="advanced"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urltext-center="advanced"]) {
   #urlbar .urlbar-input {
     text-align: center !important; 
   }
@@ -58,27 +58,27 @@
 }
 
 /* Blurs the background when url bar is focused when toggled */
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="Subtle"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Subtle"]) {
   --blur-intensity: 1px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="Normal"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Normal"]) {
   --blur-intensity: 2px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="RatherStrong"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="RatherStrong"]) {
   --blur-intensity: 3px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="Strong"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Strong"]) {
   --blur-intensity: 4px;
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="ReallyStrong"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="ReallyStrong"]) {
   --blur-intensity: 6px;
 }
 
-:root:has(#theme-Super-Url-Bar[uc-urlbar-blur-intensity="Subtle"],
-          #theme-Super-Url-Bar[uc-urlbar-blur-intensity="Normal"],
-          #theme-Super-Url-Bar[uc-urlbar-blur-intensity="RatherStrong"],
-          #theme-Super-Url-Bar[uc-urlbar-blur-intensity="Strong"],
-          #theme-Super-Url-Bar[uc-urlbar-blur-intensity="ReallyStrong"]:not([inDOMFullscreen='true']):not([chromehidden~='location']):not([chromehidden~='toolbar'])) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Subtle"],
+          #theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Normal"],
+          #theme-Belle-Url-Bar[uc-urlbar-blur-intensity="RatherStrong"],
+          #theme-Belle-Url-Bar[uc-urlbar-blur-intensity="Strong"],
+          #theme-Belle-Url-Bar[uc-urlbar-blur-intensity="ReallyStrong"]:not([inDOMFullscreen='true']):not([chromehidden~='location']):not([chromehidden~='toolbar'])) {
   #urlbar:is([breakout][breakout-extend], [breakout][usertyping][focused]):after {
     content: "";
     position: fixed;
@@ -98,24 +98,24 @@
 }
 
 /* Custom Colors for Url Bar */
-:root:has(#theme-Super-Url-Bar[uc-urlbar-custom-bg-color-mode="noFocus"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-custom-bg-color-mode="noFocus"]) {
     #urlbar:not([focused="true"]):not([breakout-extend="true"]) > #urlbar-background {
         background: var(--uc-urlbar-custom-bg-color) !important;
     }
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-custom-bg-color-mode="Focus"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-custom-bg-color-mode="Focus"]) {
     #urlbar:is([focused], [open]) > #urlbar-background {
         background: var(--uc-urlbar-custom-bg-color) !important;
     }
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-custom-bg-color-mode="AlwaysColor"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-custom-bg-color-mode="AlwaysColor"]) {
     #urlbar-background {
         background: var(--uc-urlbar-custom-bg-color) !important;
     }
 }
 
-:root:has(#theme-Super-Url-Bar[uc-urlbar-custom-bg-color-mode="AlwaysColor"],
-          #theme-Super-Url-Bar[uc-urlbar-custom-bg-color-mode="noFocus"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-custom-bg-color-mode="AlwaysColor"],
+          #theme-Belle-Url-Bar[uc-urlbar-custom-bg-color-mode="noFocus"]) {
   #identity-icon-box, #identity-permission-box {
     background-color: color-mix(in srgb, var(--uc-urlbar-custom-bg-color) 90%, light-dark(black, white)) !important;
   }
@@ -135,17 +135,17 @@
 }
 
 /* Hides the container info in url-bar */
-:root:has(#theme-Super-Url-Bar[uc-urlbar-hide-container-info="hideLabel"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-hide-container-info="hideLabel"]) {
   #userContext-label {
     display: none;
   }
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-hide-container-info="hideIcon"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-hide-container-info="hideIcon"]) {
   #userContext-indicator {
     display: none;
   }
 }
-:root:has(#theme-Super-Url-Bar[uc-urlbar-hide-container-info="hideIconLabel"]) {
+:root:has(#theme-Belle-Url-Bar[uc-urlbar-hide-container-info="hideIconLabel"]) {
   #userContext-icons {
     display: none;
   }
